<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFirst"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60FFEB3B"
        app:layout_anchor="@+id/clFirst"
        app:layout_anchorGravity="center">

        <TextView
            android:id="@+id/Logo_on_Top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFEB3B"
            android:fitsSystemWindows="false"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#131010"
            android:textSize="30sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_anchorGravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNames"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtName"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@id/textChoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textChoice"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textChoice"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintBottom_toTopOf="@id/btnSitter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtNames" />

        <Button
            android:id="@+id/btnOwner"
            android:layout_width="195dp"
            android:layout_height="51dp"
            android:layout_margin="16dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/OwnerButton"
            android:textAllCaps="false"
            android:textColor="#040303"
            app:layout_constraintBottom_toTopOf="@id/btnSitter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textChoice" />

        <Button
            android:id="@+id/btnSitter"
            android:layout_width="193dp"
            android:layout_height="51dp"
            android:layout_margin="16dp"
            android:backgroundTint="#FFEB3B"
            android:text="@string/SitterButton"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@id/btnTerminate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnOwner" />

        <Button
            android:id="@+id/btnTerminate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:backgroundTint="@color/TerminateColor"
            android:text="@string/TerminateButton"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSitter" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
            app:tint="#2E2929" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>
